| Summary: | ASTERISK-22292: res_stasis.c uses undefined function 'control_continue', maybe renamed to stasis_app_control_continue? | ||
| Reporter: | Denis Smirnov (mithraen) | Labels: | |
| Date Opened: | 2013-08-12 16:30:17 | Date Closed: | 2013-08-21 11:10:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/Stasis |
| Versions: | SVN 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | function stasis_app_exec in res_statis.c use function control_continue.
This function declared in res/stasis/control.h, but not defined anywhere. Defined only stasis_app_control_continue function, with different list of arguments | ||
| Comments: | |||